
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIGALRM ;
 int alarm (int) ;
 int child ;
 int do_child () ;
 int do_parent (char*) ;
 int fatal (char*) ;
 int fork () ;
 int getpid () ;
 int parent ;
 int prepare () ;
 int sigalrm ;
 int signal (int ,int ) ;
 int victim ;

int main(int argc, char ** argv)
{
 prepare();
 signal(SIGALRM, sigalrm);
 alarm(10);

 parent = getpid();
 child = fork();
 victim = child + 1;

 if (child == -1)
  fatal("[-] Unable to fork");

 if (child == 0)
  do_child();
 else
  do_parent(argv[0]);

 return 0;
}
